--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -1,1 +1,9 @@
-
+<DOCTYPE html!>
+  <head>
+    <title> Kronos931's unnoficial Portfolio </title>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="Kronos931",Kronos,Kronos Art, KronosArt, Kronos932">
+    <meta name="description" content="The unofficial portfolio of Kronos931,the ULTIMATE Super Paper mario fan">
+    <meta name="author" content="Ravensleigh">
+  </head>
+  
