--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -5,5 +5,13 @@
     <meta name="keywords" content="Kronos931",Kronos,Kronos Art, KronosArt, Kronos932">
     <meta name="description" content="The unofficial portfolio of Kronos931,the ULTIMATE Super Paper mario fan">
     <meta name="author" content="Ravensleigh">
+
+
+    <style>
+      body {
+        background-color: lightblue;
+        }
+    </style>
   </head>
+  
   
