--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -9,7 +9,7 @@
 
     <style>
       body {
-        background-color: lightblue;
+        background-color: Purple;
         }
     </style>
   </head>
