--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -1,17 +1,57 @@
 <DOCTYPE html!>
-  <head>
-    <title> Kronos931's unnoficial Portfolio </title>
-    <meta charset="UTF-8">
-    <meta name="keywords" content="Kronos931",Kronos,Kronos Art, KronosArt, Kronos932">
-    <meta name="description" content="The unofficial portfolio of Kronos931,the ULTIMATE Super Paper mario fan">
-    <meta name="author" content="Ravensleigh">
+  <html>
+    <head>
+      <title> Kronos931's unnoficial Portfolio </title>
+      <meta charset="UTF-8">
+      <meta name="keywords" content="Kronos931",Kronos,Kronos Art, KronosArt, Kronos932">
+      <meta name="description" content="The unofficial portfolio of Kronos931,the ULTIMATE Super Paper mario fan">
+      <meta name="author" content="Ravensleigh">
 
 
-    <style>
-      body {
-        background-color: Purple;
-        }
-    </style>
-  </head>
-  
+      <style>
+        body {
+          background-color: Purple;
+          }
+
+        div.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+
+div.gallery-item {
+  margin: 5px;
+  border: 1px solid #ccc;
+  width: 180px;
+}
+
+div.gallery-item:hover {
+  border: 1px solid #777;
+}
+
+div.gallery-item img {
+  width: 100%;
+  height: auto;
+}
+
+div.gallery-item div.desc {
+  padding: 15px;
+  text-align: center;
+}
+      </style>
+    </head>
+    
+    <body>
+    <div class="gallery">
+      
+      <div class="gallery-item">
+        <a target="_blank" href="Watermelon.jpg">
+          <img src="Watermelon.jpg" alt="Watermelon Jester" width="500" height="500">
+        </a>        
+        <div class="desc"> Watermelon Jester </div>
+      </div>
+
+    </div>
+    </body>
+ </html>
   
