--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -11,6 +11,9 @@
       <style>
         body {
           background-color: Purple;
+          font-family: Arial, Helvetica, sans-serif;
+          font-size: 20px;
+          line-height: 1.5;
           }
 
         div.gallery {
