--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -58,7 +58,7 @@ div.gallery-item div.desc {
 
       <div class="gallery-item">
         <a target="_blank" href="PORT17A.jpg">
-          <img src="Watermelon.jpg" alt="Dimentio (White background)" width="500" height="500">
+          <img src="PORT17A.jpg" alt="Dimentio (White background)" width="500" height="500">
         </a>
         <div class="desc"> Dimentio (White background) </div>
       </div>
@@ -106,10 +106,10 @@ div.gallery-item div.desc {
       </div>
 
       <div class="gallery-item">
-        <a target="_blank" href="PORT4.jpg">
-          <img src="PORT4.jpg" alt="Light Prognosticus" width="500" height="500">
+        <a target="_blank" href="PORT10.jpg">
+          <img src="PORT10.jpg" alt="Bomb thing?" width="500" height="500">
         </a>
-        <div class="desc">Light Prognosticus </div>
+        <div class="desc"> Bomb thing </div>
       </div>
 
       <div class="gallery-item">
@@ -131,6 +131,34 @@ div.gallery-item div.desc {
           <img src="PORT9.jpg" alt="Squiglet" width="500" height="500">
         </a>
         <div class="desc">Squiglet</div>
+      </div>
+
+      <div class="gallery-item">
+        <a target="_blank" href="PORT12.jpg">
+          <img src="PORT12.jpg" alt="Sheep" width="500" height="500">
+        </a>
+        <div class="desc">Sheep</div>
+      </div>
+
+      <div class="gallery-item">
+        <a target="_blank" href="PORT11.jpg">
+          <img src="PORT11.jpg" alt="Hand" width="500" height="500">
+        </a>
+        <div class="Hand"></div>
+      </div>
+      
+      <div class="gallery-item">
+        <a target="_blank" href="PORT6.jpg">
+          <img src="PORT6.jpg" alt="Pure Heart" width="500" height="500">
+        </a>
+        <div class="Pure Heart"></div>
+      
+      </div>
+      <div class="gallery-item">
+        <a target="_blank" href="PORT2.jpg">
+          <img src="PORT2.jpg" alt="Chaos Heart" width="500" height="500">
+        </a>
+        <div class="Chaos Heart"></div>
       </div>
 
 
