--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -6,7 +6,7 @@
       <meta name="keywords" content="Kronos931",Kronos,Kronos Art, KronosArt, Kronos932">
       <meta name="description" content="The unofficial portfolio of Kronos931,the ULTIMATE Super Paper mario fan">
       <meta name="author" content="Ravensleigh">
-      <link rel="icon" href="favicon.png">
+      <link rel="icon" href="Kronos931/favicon.png">
 
 
 
