--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -9,12 +9,19 @@
       <link rel="icon" href="Kronos931/favicon.png">
 
 
-
+  
 
       <style>
+        @font-face {
+          font-family: "HeyGeorgous";
+          src: url("heygeorgous.ttf") format("truetype");
+          font-weight: normal;
+          font-style: normal;
+          }
+
         body {
           background-color: Purple;
-          font-family: Arial, Helvetica, sans-serif;
+          font-family: HeyGeorgous, sans-serif;
           font-size: 20px;
           line-height: 1.5;
           }
