--- a/Kronos931/index.html
+++ b/Kronos931/index.html
@@ -21,7 +21,7 @@
 
         body {
           background-color: Purple;
-          font-family: HeyGeorgous, sans-serif;
+          font-family: "HeyGeorgous", sans-serif;
           font-size: 20px;
           line-height: 1.5;
           }
